# python-flask-app-test

./: Dockerfile  Makefile  README.md  TESTING.md  app.py  app_test.py  apptest.py  compose.yaml  main.py  pyproject.toml  requirements.txt  run_tests.py  script.py  test.db  warp_test_python_talk.txt
.github/workflows/: build_and_publish.yml  build_and_push_to_dockerhub  build_and_push_to_dockerhub.yml  ci.yml
scripts/: test.py
src/flask_todo_app/: __init__.py
src/flask_todo_app/templates/: index.html  update.html
static/css/: main.css
test/: app_test.py
tests/: conftest.py
tests/fixtures/: factories.py
tests/integration/: test_api.py  test_performance.py  test_routes.py
tests/unit/: test_models.py
